# go2_pendulum_ros2

./: .gitignore  CLAUDE.md  Dockerfile  build_and_run.sh  entrypoint.sh  go2_pendulum
dependencies/: cyclonedds.xml
go2_pendulum/go2_bringup/: CMakeLists.txt  package.xml
go2_pendulum/go2_bringup/scripts/: imu_to_projected_gravity.py  plot_policy_debug_csv.py  rl_controller.py
go2_pendulum/go2_controller/: CMakeLists.txt  package.xml
go2_pendulum/go2_controller/src/: go2_damp_service.cpp
go2_pendulum/go2_description/: CMakeLists.txt  README.md
go2_pendulum/go2_description/urdf/: go2_description.urdf
go2_pendulum/go2_description/xacro/: robot.xacro
go2_pendulum/go2_interfaces/: CMakeLists.txt  package.xml
go2_pendulum/isaac/: launch_sim.py  run_go2_policy_direct.py
src/go2_pendulum/go2_bridge/: CMakeLists.txt  data.7z  package.xml
src/go2_pendulum/go2_bridge/config/: gains.yaml
src/go2_pendulum/go2_bridge/data/: 20260420_192232.csv  20260426_202610.csv  20260426_203131.csv  20260426_204855.csv  20260426_222209.csv  20260426_230240.csv  calibration.csv  center_joint1.csv  center_joint2.csv  data.csv  data2.csv  plot_data.py  plot_pendulum.py
src/go2_pendulum/go2_bridge/go2_bridge/: crc.py
src/go2_pendulum/go2_bridge/launch/: go2_bridge.launch.xml
src/go2_pendulum/go2_bridge/rviz/: config.rviz
src/go2_pendulum/go2_bridge/scripts/: go2_bridge_node.py  go2_bridge_passive_node.py  joint_states_logger_node.py
src/go2_pendulum/go2_bringup/: CMakeLists.txt  package.xml
src/go2_pendulum/go2_bringup/config/: config.yaml
src/go2_pendulum/go2_bringup/launch/: bringup.launch.xml
src/go2_pendulum/go2_bringup/model/: policy.onnx  policy.onnx.data  policy.pt
src/go2_pendulum/go2_bringup/model/params/: agent.yaml  env.yaml
src/go2_pendulum/go2_bringup/model_backup/: policy.onnx
src/go2_pendulum/go2_bringup/model_backup/params/: env.yaml
src/go2_pendulum/go2_bringup/rviz/: config.rviz
src/go2_pendulum/go2_bringup/scripts/: joy_orchestrator_node.py  odom_to_tf.py  publish_gait_cycle.py  record_policy_debug.py  sweep_joint_command.py
src/go2_pendulum/go2_bringup/src/: rl_controller_node.cpp
src/go2_pendulum/go2_description/: package.xml
src/go2_pendulum/go2_description/launch/: go2_description.launch.xml
src/go2_pendulum/go2_description/urdf/: go2_description_gui.urdf
src/go2_pendulum/go2_navigation/: CMakeLists.txt  package.xml
src/go2_pendulum/go2_navigation/config/: nav.yaml
src/go2_pendulum/go2_navigation/scripts/: waypoint_manager_node.py
src/go2_pendulum/isaac/: launch_sim.py  run_go2_policy_direct.py
src/go2_pendulum/isaac/model/params/: env.yaml
src/go2_pendulum/mujoco/: go2_pendulum.xml  policy.pt  run_policy.py
src/ros2-vicon-receiver/vicon_receiver/launch/: client.launch.xml
src/ros2-vicon-receiver/vicon_receiver/src/: communicator.cpp
