<?xml version="1.0"?>
<package format="3">
  <name>go2_navigation</name>
  <version>0.0.1</version>
  <description>Waypoint-based navigation for Go2 RL controller</description>
  <maintainer email="john.abanes@nyu.edu">john</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
